--- a/apprunner.yaml
+++ b/apprunner.yaml
@@ -1,14 +1,8 @@
+version: 1.0
+runtime: python3
+build:
+  commands:
+    build:
+      - pip install -r requirements.txt
 run:
-  runtime-version: 3.11
-  pre-run:
-    - pip install -r requirements.txt
-    - pip3 install pipenv
-    - pipenv install
-  command: streamlit run chatbot.py --server.port 8501 --server.address 0.0.0.0
-network:
-  port: 8501
-env:
-  - name: APP_RUNNER
-    value: "APP_RUNNER_test"  # 如果 APP_RUNNER 没有具体的值，可以留空
-  - name: AWS_REGION
-    value: us-east-1
+  command: python server.py
